<resources>
    <string name="app_name">GADE @PDM115</string>
    <string name="inicio">Iniciar sesion</string>
    <string name="username">usuario</string>
    <string name="password">contraseña</string>
    <string name="login">Entrar</string>
    <string name="inicializar">incializar usuarios</string>
    <string name="salir">salir</string>
    <string name="verUsuarios">ver usuarios</string>
    <string name="lista">lista</string>
    <string name="name">nombre</string>
    <string name="header">Usuarios</string>
    <string name="userNormal">Usuario Normal</string>
    <string name="userAdmin">Administrador</string>
    <string name="agregarU">agregar usuario</string>
    <string name="title_admin">Gestion de Admin. de locales</string>
    <string name="adminLocal">administrador:</string>
    <string name="nombreAdmin">nombre</string>

    <string name="docenteInsertar">Insertar Docente</string>
    <string name="docenteEliminar">Eliminar Docente</string>
    <string name="docenteActualizar">Actualizar Docente</string>
    <string name="docenteConsultar">Consultar Docente</string>

    <string name="idDocente">Id docente</string>
    <string name="nombreDoc">Nombre Docente</string>

    <string name="actividadInsertar">Insertar Actividad</string>
    <string name="actividadEliminar">Eliminar Actividad</string>
    <string name="actividadActualizar">Actualizar Actividad</string>
    <string name="actividadConsultar">Consultar Actividad</string>

    <string name="idActividad">Id Actividad</string>
    <string name="tipoActividad">Tipo Actividad</string>
    <string name="nomTipoActividad">Nombre Tipo Actividad</string>

    <string name="tipoactividadInsertar">Insertar Tipo Actividad</string>
    <string name="tipoactividadEliminar">Eliminar Tipo Actividad</string>
    <string name="tipoactividadActualizar">Actualizar Tipo Actividad</string>
    <string name="tipoactividadConsultar">Consultar Tipo Actividad</string>

    <string name="idTipoActividad">Id Tipo Actividad</string>

    <string name="local">id local</string>
    <string name="nombreLocal">local:</string>
    <string name="idAdmin">id admin</string>
    <string name="idCupo">cupo</string>
    <string name="nombreAdministrador">administrador</string>

    <string name="escuelaInsertar">Insertar Escuela</string>
    <string name="escuelaActualizar">Actualizar Escuela</string>
    <string name="escuelaConsultar">Consultar Escuela</string>
    <string name="escuelaEliminar">Eliminar Escuela</string>

    <string name="nombreEscuela">Escuela:</string>
    <string name="idEscuela">Código Escuela:</string>
    <string name="insertarEscuela">Insertar Escuela</string>

    <string name="estudianteInsertar">Insertar Estudiante</string>
    <string name="estudianteActualizar">Actualizar Estudiante</string>
    <string name="estudianteConsultar">Consultar Estudiante</string>
    <string name="estudianteEliminar">Eliminar Estudiante</string>

    <string name="carnet">Carnet:</string>
    <string name="nombreEstudiante">Estudiante:</string>

    <string name="participacionInsertar">Insertar Participación</string>
    <string name="participacionActualizar">Actualizar Participación</string>
    <string name="participacionConsultar">Consultar Participación</string>
    <string name="participacionEliminar">Eliminar Participación</string>
    <string name="valoracion">Valoración:</string>
    <string name="comentario">Comentario:</string>
    <string name="idAct">ID Actividad:</string>

    <string name="opciones">Opciones:</string>
    <string name="limpiar">Limpiar</string>
    <string name="consultar">Consultar</string>


    <string name="insertar">Insertar</string>
    <string name="numReserva">Reserva #</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="carnetEst">Carnet de Estudiante</string>

    <string name="idHorario">Id de horario</string>
    <string name="dia">Dia</string>
    <string name="horarioDesde">Hora de inicio</string>
    <string name="horarioHasta">Hora de finalización</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="NombreEstudiante">nombre del estudiante</string>
    <string name="nomDocente">Nombre del docente</string>
    <string name="icono">icono</string>

    <string name="idEsc">Id Escuela</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomDoc">nombre del docente</string>
    <string name="idDoc">id Docente</string>
    <string name="nomActividad">Nombre de la Actividad</string>
    <string name="headerlocal">Locales</string>
    <string name="L_H">Seleccione una opcion</string>
    <string name="consultarAdmin">Administradores</string>
    <string name="consultarLocales">Consultar locales</string>
    <string name="Seleccionar">Seleccione una opcion</string>
    <string name="Hora">Hora</string>
    <string name="ciclo">ciclo</string>
    <string name="estado">Estado de la actividad</string>
    <string name="disponible">Disponible</string>

</resources>
