<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idHorario"/>
        <EditText
            android:id="@+id/editIdHorario"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/horarioDesde" />
        <EditText
            android:id="@+id/editHorarioDesde"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/horarioHasta" />
        <EditText
            android:id="@+id/editHorarioHasta"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarHorario"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
