<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idActividad" />

        <EditText
            android:id="@+id/editIdActividad"
            android:inputType="time"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipoActividad" />

        <EditText
            android:id="@+id/editTipoActividad"
            android:inputType="time"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idDocente" />

        <EditText
            android:id="@+id/editIdDoc"
            android:inputType="time"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nomActividad" />

        <EditText
            android:id="@+id/editNomAct"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarActividad"
            android:text="@string/actualizar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>