<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/numReserva" />

        <EditText
            android:id="@+id/editId"
            android:inputType="number"
             />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/estado" />

        <EditText
            android:id="@+id/editEstadoModificar"
            android:inputType="number"
            />
    </TableRow>
    <TableRow>

        <Button
            android:onClick="modificarReserva"
            android:text="@string/actualizar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>