<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idHorario" />
        <EditText
            android:id="@+id/editIdHorario"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/dia" />
        <EditText
            android:id="@+id/editDia"
            android:inputType="text"
            android:maxLength="12" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/horarioDesde" />
        <EditText
            android:id="@+id/editHorarioDesde"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/horarioHasta" />
        <EditText
            android:id="@+id/editHorarioHasta"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarHorario"
            android:text="@string/actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lapiz"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#ef9a9a"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lapiz"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#ef9a9a"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </TableRow>
</TableLayout>