<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/estudianteActualizar"
            android:textSize="30sp"
            android:background="@color/colorUpdate" />
    </RelativeLayout>

    <TableRow>
        <TextView android:text="@string/carnetEst"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/carnetEst"
            android:inputType="text"
            android:maxLength="70"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <TextView
            android:layout_gravity="center"
            android:text="@string/opciones" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnActualizarEstudianteDatos"
            android:text="@string/estudianteActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnLimpiarEstudianteDatos"
            android:text="@string/limpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/idEscuela"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/idEscuela"
            android:inputType="number"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nombreEstudiante"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/nomEstudiante"
            android:inputType="text"
            android:maxLength="70"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </TableRow>

</TableLayout>