<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#f8e678"
            android:gravity="center"
            android:text="@string/participacionConsultar"
            android:textSize="30sp" />
    </RelativeLayout>

    <TableRow>
        <TextView android:text="@string/idActividad"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/idAct"
            android:inputType="number"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/carnetEst"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/carnetEst"
            android:inputType="text"
            android:maxLength="70"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <TextView
            android:layout_gravity="center"
            android:text="@string/opciones" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnConsultarParticipacionDatos"
            android:text="@string/participacionConsultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnLimpiarParticipacionDatos"
            android:text="@string/limpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </TableRow>


    <TableRow>
        <TextView android:text="@string/valoracion"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/valoracionPar"
            android:inputType="number"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:enabled ="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/comentario"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />
        <EditText
            android:id="@+id/comentarioPar"
            android:inputType="text"
            android:maxLength="70"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:enabled ="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>
    </TableRow>

</TableLayout>